--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://roundhouse.proxy.rlwy.net:34962/railway?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/dentaire-projet?serverTimezone=UTC
 spring.datasource.username = root
-spring.datasource.password = 6-EDCfFHeB4aGaa4ehggCFDb2G-362eg
+spring.datasource.password =
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto = update
